--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,21 @@
-
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+    </head>
+    <body>
+        <div style="width: 210px; height: 210px; padding: 5px; display: inline-block; background-color: #00e1ff;">
+            <img src="file:///C:/Users/DATA%20SCIENCE%20LAB%2014/Downloads/Safeimagekit-resized-img.png">
+            <p>Smiley</p>
+        </div>
+        <div style="width: 210px; height: 210px; padding: 5px; display: inline-block; background-color: #0bad18;">
+            <img src="file:///C:/Users/DATA%20SCIENCE%20LAB%2014/Downloads/Safeimagekit-resized-img%20(1).png">
+            <p>Meme Dog</p>
+        </div>
+        <div style="width: 210px; height: 210px; padding: 5px; display: inline-block; background-color: rgb(255, 0, 234);">
+            <img src="file:///C:/Users/DATA%20SCIENCE%20LAB%2014/Downloads/Safeimagekit-resized-img%20(2).png">
+            <p>Chinese Beaver</p>
+        </div>
+    </body>
+</html>
